--- a/BH/demo.ipynb
+++ b/BH/demo.ipynb
@@ -1,5 +1,46 @@
 {
- "cells": [],
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "59ccf164",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "from torch.utils.data import TensorDataset, DataLoader\n",
+    "import numpy as np\n",
+    "from sklearn.datasets import fetch_california_housing\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "print('torch:', torch.__version__)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bab5b7c5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X, y = fetch_california_housing(return_X_y=True)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "scaler = StandardScaler()\n",
+    "X_train = scaler.fit_transform(X_train)\n",
+    "X_test = scaler.transform(X_test)\n",
+    "\n",
+    "X_train = torch.tensor(X_train, dtype=torch.float32)\n",
+    "y_train = torch.tensor(y_train, dtype=torch.float32).unsqueeze(1)\n",
+    "train_ds = TensorDataset(X_train, y_train)\n",
+    "train_loader = DataLoader(train_ds, batch_size=64, shuffle=True)\n",
+    "\n",
+    "# quick sanity check\n",
+    "Xb, yb = next(iter(train_loader))\n",
+    "print('batch X shape:', Xb.shape, 'batch y shape:', yb.shape)\n"
+   ]
+  }
+ ],
  "metadata": {
   "language_info": {
    "name": "python"
