--- a/FMNIST/demo.ipynb
+++ b/FMNIST/demo.ipynb
@@ -1,5 +1,42 @@
 {
- "cells": [],
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0e552811",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.optim as optim\n",
+    "from torch.utils.data import DataLoader\n",
+    "import torchvision\n",
+    "from torchvision import transforms\n",
+    "\n",
+    "print('torch:', torch.__version__)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d320cedc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load\n",
+    "transform = transforms.Compose([\n",
+    "    transforms.ToTensor(),\n",
+    "    transforms.Normalize((0.2860,), (0.3530,))\n",
+    "])\n",
+    "train_set = torchvision.datasets.FashionMNIST(root='./data', train=True, download=True, transform=transform)\n",
+    "train_loader = DataLoader(train_set, batch_size=64, shuffle=True, num_workers=2)\n",
+    "\n",
+    "images, targets = next(iter(train_loader))\n",
+    "print('batch shape:', images.shape, 'targets shape:', targets.shape)\n"
+   ]
+  }
+ ],
  "metadata": {
   "language_info": {
    "name": "python"
