--- a/CF10/demo.ipynb
+++ b/CF10/demo.ipynb
@@ -1,5 +1,44 @@
 {
- "cells": [],
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "102829ae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.optim as optim\n",
+    "from torch.utils.data import DataLoader\n",
+    "import torchvision\n",
+    "from torchvision import transforms\n",
+    "\n",
+    "print('torch:', torch.__version__)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "81cab362",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load CIFAR-10 (train), create a DataLoader\n",
+    "transform = transforms.Compose([\n",
+    "    transforms.RandomHorizontalFlip(),\n",
+    "    transforms.RandomCrop(32, padding=4),\n",
+    "    transforms.ToTensor(),\n",
+    "    transforms.Normalize((0.4914, 0.4822, 0.4465), (0.2470, 0.2435, 0.2616))\n",
+    "])\n",
+    "train_set = torchvision.datasets.CIFAR10(root='./data', train=True, download=True, transform=transform)\n",
+    "train_loader = DataLoader(train_set, batch_size=128, shuffle=True, num_workers=2)\n",
+    "\n",
+    "images, targets = next(iter(train_loader))\n",
+    "print('batch shape:', images.shape, 'targets shape:', targets.shape)\n"
+   ]
+  }
+ ],
  "metadata": {
   "language_info": {
    "name": "python"
