--- a/MNIST/demo.ipynb
+++ b/MNIST/demo.ipynb
@@ -1,5 +1,43 @@
 {
- "cells": [],
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ef73c997",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.optim as optim\n",
+    "from torch.utils.data import DataLoader\n",
+    "import torchvision\n",
+    "from torchvision import transforms\n",
+    "\n",
+    "print('torch:', torch.__version__)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d147beda",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load MNIST (train) & create a DataLoader\n",
+    "transform = transforms.Compose([\n",
+    "    transforms.ToTensor(),\n",
+    "    transforms.Normalize((0.1307,), (0.3081,))\n",
+    "])\n",
+    "train_set = torchvision.datasets.MNIST(root='./data', train=True, download=True, transform=transform)\n",
+    "train_loader = DataLoader(train_set, batch_size=64, shuffle=True, num_workers=2)\n",
+    "\n",
+    "# double check for now\n",
+    "images, targets = next(iter(train_loader))\n",
+    "print('batch shape:', images.shape, 'targets shape:', targets.shape)\n"
+   ]
+  }
+ ],
  "metadata": {
   "language_info": {
    "name": "python"
