--- a/BH/demo.ipynb
+++ b/BH/demo.ipynb
@@ -2,14 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "59ccf164",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch: 2.7.1+cu118\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
-    "from torch.utils.data import TensorDataset, DataLoader\n",
     "import numpy as np\n",
+    "\n",
+    "from torch.utils.data import TensorDataset, DataLoader\n",
     "from sklearn.datasets import fetch_california_housing\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import StandardScaler\n",
@@ -35,15 +44,28 @@
     "train_ds = TensorDataset(X_train, y_train)\n",
     "train_loader = DataLoader(train_ds, batch_size=64, shuffle=True)\n",
     "\n",
-    "# quick sanity check\n",
     "Xb, yb = next(iter(train_loader))\n",
     "print('batch X shape:', Xb.shape, 'batch y shape:', yb.shape)\n"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
