--- a/FMNIST/demo.ipynb
+++ b/FMNIST/demo.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "ddf95162",
+   "metadata": {},
+   "source": [
+    "# Fashion MNIST"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "0e552811",
