--- a/CF10/demo.ipynb
+++ b/CF10/demo.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "37aad110",
+   "metadata": {},
+   "source": [
+    "# CIFAR10"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "102829ae",
