--- a/MNIST/demo.ipynb
+++ b/MNIST/demo.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "9ed0b572",
+   "metadata": {},
+   "source": [
+    "# MNIST"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "ef73c997",
