--- a/UCIW/demo.ipynb
+++ b/UCIW/demo.ipynb
@@ -1,14 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "0f464016",
+   "metadata": {},
+   "source": [
+    "# UCI Wine Datasets"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "b3404b49",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Imports\n",
-    "\n",
     "import torch\n",
     "from torch.utils.data import TensorDataset, DataLoader\n",
     "import numpy as np\n",
@@ -39,7 +45,6 @@
     "train_ds = TensorDataset(X_train, y_train)\n",
     "train_loader = DataLoader(train_ds, batch_size=32, shuffle=True)\n",
     "\n",
-    "# quick sanity check\n",
     "Xb, yb = next(iter(train_loader))\n",
     "print('batch X shape:', Xb.shape, 'batch y shape:', yb.shape)\n"
    ]
