Slow progress but progress

--- a/CH/demo.ipynb
+++ b/CH/demo.ipynb
@@ -57,8 +57,77 @@
     "print(\"Train X:\", X_train.shape, \"Train y:\", y_train.shape)\n",
     "print(\"Val   X:\", X_val.shape,   \"Val   y:\", y_val.shape)\n",
     "print(\"Test  X:\", X_test.shape,  \"Test  y:\", y_test.shape)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9e040b36",
+   "metadata": {},
+   "source": [
+    "## Train Without Regularization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "692b211d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train_t = torch.tensor(X_train, dtype=torch.float32)\n",
+    "y_train_t = torch.tensor(y_train, dtype=torch.float32).view(-1, 1)\n",
     "\n",
-    "# Do nothing else\n"
+    "w = torch.zeros((X_train.shape[1], 1), requires_grad=True)\n",
+    "b = torch.zeros(1, requires_grad=True)\n",
+    "\n",
+    "lr = 1e-3\n",
+    "epochs = 200\n",
+    "\n",
+    "for _ in range(epochs):\n",
+    "    y_pred = X_train_t @ w + b\n",
+    "    loss = ((y_pred - y_train_t) ** 2).mean()\n",
+    "    loss.backward()\n",
+    "    with torch.no_grad():\n",
+    "        w -= lr * w.grad\n",
+    "        b -= lr * b.grad\n",
+    "        w.grad.zero_()\n",
+    "        b.grad.zero_()\n",
+    "\n",
+    "print(\"Final loss:\", loss.item())\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "40b19bcf",
+   "metadata": {},
+   "source": [
+    "## Test Loss"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cdbf1857",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_test_t = torch.tensor(X_test, dtype=torch.float32)\n",
+    "y_test_t = torch.tensor(y_test, dtype=torch.float32).view(-1, 1)\n",
+    "\n",
+    "with torch.no_grad():\n",
+    "    y_pred_test = X_test_t @ w + b\n",
+    "    test_loss = ((y_pred_test - y_test_t) ** 2).mean()\n",
+    "\n",
+    "print(\"Test loss:\", test_loss.item())\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2afce749",
+   "metadata": {},
+   "source": [
+    "## Now Train With Regularization"
    ]
   }
  ],
