Big progress on MNIST + some work on the rest

--- a/MNIST/demo.ipynb
+++ b/MNIST/demo.ipynb
@@ -5,7 +5,7 @@
    "id": "9ed0b572",
    "metadata": {},
    "source": [
-    "# MNIST"
+    "# MNIST Dataset\n"
    ]
   },
   {
@@ -16,14 +16,11 @@
    "outputs": [],
    "source": [
     "import torch\n",
-    "import torch.nn as nn\n",
-    "import torch.optim as optim\n",
+    "import numpy as np\n",
     "import torchvision\n",
+    "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "from torch.utils.data import DataLoader\n",
-    "from torchvision import transforms\n",
-    "\n",
-    "print('torch:', torch.__version__)\n"
+    "print('torch:', torch.__version__)"
    ]
   },
   {
@@ -33,17 +30,98 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load MNIST (train) & create a DataLoader\n",
-    "transform = transforms.Compose([\n",
-    "    transforms.ToTensor(),\n",
-    "    transforms.Normalize((0.1307,), (0.3081,))\n",
-    "])\n",
-    "train_set = torchvision.datasets.MNIST(root='./data', train=True, download=True, transform=transform)\n",
-    "train_loader = DataLoader(train_set, batch_size=64, shuffle=True, num_workers=2)\n",
+    "# Load full dataset\n",
+    "train_set = torchvision.datasets.MNIST(root='./data', train=True, download=True, transform=torchvision.transforms.ToTensor())\n",
+    "test_set = torchvision.datasets.MNIST(root='./data', train=False, download=True, transform=torchvision.transforms.ToTensor())\n",
     "\n",
-    "# double check for now\n",
-    "images, targets = next(iter(train_loader))\n",
-    "print('batch shape:', images.shape, 'targets shape:', targets.shape)\n"
+    "# Combine and split\n",
+    "X = torch.cat([train_set.data, test_set.data], dim=0).float()\n",
+    "y = torch.cat([train_set.targets, test_set.targets], dim=0).float()\n",
+    "\n",
+    "# Reshape for linear model\n",
+    "X = X.view(X.shape[0], -1)\n",
+    "\n",
+    "# Train/val/test split: 70/15/15\n",
+    "X_train, X_tmp, y_train, y_tmp = train_test_split(\n",
+    "    X.numpy(), y.numpy(), test_size=0.30, random_state=42\n",
+    ")\n",
+    "X_val, X_test, y_val, y_test = train_test_split(\n",
+    "    X_tmp, y_tmp, test_size=0.50, random_state=42\n",
+    ")\n",
+    "\n",
+    "# Print dimensions\n",
+    "print(\"Train X:\", X_train.shape, \"Train y:\", y_train.shape)\n",
+    "print(\"Val   X:\", X_val.shape,   \"Val   y:\", y_val.shape)\n",
+    "print(\"Test  X:\", X_test.shape,  \"Test  y:\", y_test.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "11adfcab",
+   "metadata": {},
+   "source": [
+    "## Train Withour Regularization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b14479cf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train_t = torch.tensor(X_train, dtype=torch.float32)\n",
+    "y_train_t = torch.tensor(y_train, dtype=torch.float32).view(-1, 1)\n",
+    "\n",
+    "# MNIST has 10 classes\n",
+    "n_input = X_train.shape[1]\n",
+    "n_output = 10\n",
+    "\n",
+    "w = torch.zeros((n_input, n_output), requires_grad=True)\n",
+    "b = torch.zeros(n_output, requires_grad=True)\n",
+    "\n",
+    "lr = 1e-4\n",
+    "epochs = 100\n",
+    "loss_fn = torch.nn.CrossEntropyLoss()\n",
+    "\n",
+    "for i in range(epochs):\n",
+    "    y_pred = X_train_t @ w + b\n",
+    "    loss = loss_fn(y_pred, y_train_t.long().squeeze())\n",
+    "    loss.backward()\n",
+    "    with torch.no_grad():\n",
+    "        w -= lr * w.grad\n",
+    "        b -= lr * b.grad\n",
+    "        w.grad.zero_()\n",
+    "        b.grad.zero_()\n",
+    "    if (i+1) % 10 == 0:\n",
+    "        print(f\"Epoch {i+1}, Loss: {loss.item():.4f}\")\n",
+    "\n",
+    "print(\"Final loss:\", loss.item())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "68d3d834",
+   "metadata": {},
+   "source": [
+    "## Test Loss"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bb85267b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_test_t = torch.tensor(X_test, dtype=torch.float32)\n",
+    "y_test_t = torch.tensor(y_test, dtype=torch.float32).view(-1, 1)\n",
+    "\n",
+    "with torch.no_grad():\n",
+    "    y_pred_test = X_test_t @ w + b\n",
+    "    test_loss = loss_fn(y_pred_test, y_test_t.long().squeeze())\n",
+    "\n",
+    "print(\"Test loss:\", test_loss.item())"
    ]
   }
  ],
