--- a/UCIW/demo.ipynb
+++ b/UCIW/demo.ipynb
@@ -48,6 +48,22 @@
     "Xb, yb = next(iter(train_loader))\n",
     "print('batch X shape:', Xb.shape, 'batch y shape:', yb.shape)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bfb2ab62",
+   "metadata": {},
+   "source": [
+    "## Train Without Regularization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "99e51161",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
