--- a/CF10/demo.ipynb
+++ b/CF10/demo.ipynb
@@ -46,6 +46,22 @@
     "images, targets = next(iter(train_loader))\n",
     "print('batch shape:', images.shape, 'targets shape:', targets.shape)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "14b559d9",
+   "metadata": {},
+   "source": [
+    "## Train Without Regularization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "de2a0ace",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
