--- a/FMNIST/demo.ipynb
+++ b/FMNIST/demo.ipynb
@@ -44,6 +44,22 @@
     "images, targets = next(iter(train_loader))\n",
     "print('batch shape:', images.shape, 'targets shape:', targets.shape)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5a5845d8",
+   "metadata": {},
+   "source": [
+    "## Train Without Regularization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9ddb5515",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
