--- a/CF10/demo.ipynb
+++ b/CF10/demo.ipynb
@@ -62,6 +62,22 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "14b8298c",
+   "metadata": {},
+   "source": [
+    "## Test Loss"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "46526858",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
