--- a/MNIST/demo.ipynb
+++ b/MNIST/demo.ipynb
@@ -60,7 +60,7 @@
    "id": "11adfcab",
    "metadata": {},
    "source": [
-    "## Train Withour Regularization"
+    "## Train Without Regularization"
    ]
   },
   {
@@ -123,6 +123,206 @@
     "\n",
     "print(\"Test loss:\", test_loss.item())"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8640eb7c",
+   "metadata": {},
+   "source": [
+    "## Now Train WITH Regularization"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eeb5e60d",
+   "metadata": {},
+   "source": [
+    "### Norm-Based Regularization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "889c6cf5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ab88b774",
+   "metadata": {},
+   "source": [
+    "### Test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "15c2a264",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d60307fc",
+   "metadata": {},
+   "source": [
+    "### Noise-Based Regularization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a705d7b3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "95637b5a",
+   "metadata": {},
+   "source": [
+    "### Test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "39de2d21",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b559161f",
+   "metadata": {},
+   "source": [
+    "### Data Augmentation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "589b600d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7f0e2b55",
+   "metadata": {},
+   "source": [
+    "### Now Test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1e1251ac",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "68b67152",
+   "metadata": {},
+   "source": [
+    "### Label Smoothing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8f94c195",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8051d919",
+   "metadata": {},
+   "source": [
+    "### Now Test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7342fe47",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c8ac169a",
+   "metadata": {},
+   "source": [
+    "### Architectural Regularization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f02b8cf7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1f6bad3a",
+   "metadata": {},
+   "source": [
+    "### Now Test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1947d433",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4ffd98d3",
+   "metadata": {},
+   "source": [
+    "### Gradient Penalty-based Regularization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "853eb502",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d5fed4d3",
+   "metadata": {},
+   "source": [
+    "### Now Test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a6ea3a99",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
