--- a/UCIW/demo.ipynb
+++ b/UCIW/demo.ipynb
@@ -63,6 +63,47 @@
    "id": "99e51161",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "X_train_t = X_train.clone().detach()\n",
+    "y_train_t = y_train.clone().detach()\n",
+    "\n",
+    "n_features = X_train_t.shape[1]\n",
+    "n_classes = int(y_train_t.max().item()) + 1\n",
+    "\n",
+    "w = torch.zeros((n_features, n_classes), requires_grad=True)\n",
+    "b = torch.zeros(n_classes, requires_grad=True)\n",
+    "\n",
+    "lr = 1e-2\n",
+    "epochs = 200\n",
+    "loss_fn = torch.nn.CrossEntropyLoss()\n",
+    "\n",
+    "for _ in range(epochs):\n",
+    "    logits = X_train_t @ w + b\n",
+    "    loss = loss_fn(logits, y_train_t)\n",
+    "    loss.backward()\n",
+    "    with torch.no_grad():\n",
+    "        w -= lr * w.grad\n",
+    "        b -= lr * b.grad\n",
+    "        w.grad.zero_()\n",
+    "        b.grad.zero_()\n",
+    "\n",
+    "print(\"Final training loss:\", loss.item())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ec52194c",
+   "metadata": {},
+   "source": [
+    "## Test Loss"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ede04a02",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
