--- a/FMNIST/demo.ipynb
+++ b/FMNIST/demo.ipynb
@@ -60,6 +60,22 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "26470931",
+   "metadata": {},
+   "source": [
+    "## Test Loss"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cb9f46e1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
